<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/join_title"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/join_id"
        android:id="@+id/ET_Join_ID"
        android:inputType="textEmailAddress"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/join_pw"
        android:inputType="textPassword"
        android:id="@+id/ET_Join_PW"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/join_pw_check"
        android:inputType="textPassword"
        android:id="@+id/ET_Join_PW_Chk"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Btn_Join_Confirm"
        android:text="@string/join_confirm_btn"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Btn_Join_Cancle"
        android:text="@string/join_cancle_btn"
        />

</LinearLayout>